--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -19,7 +19,7 @@
     
         <div align="right">
           <button type="button" class="collapsible">
-        <img id="menubar" src="MixTooLz Images/Edit.png">Tools</button>
+        <img id="menubar" src="MixTooLz Images/Edit.png">&nbsp;Tools</button>
       
         <div class="content1">
   
