--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -74,12 +74,15 @@
                 <h2>Import pdf to flatten</h2>
 
                 <label for="fileInput">pdf</label>
-                <input type="file" id="fileInput" accept=".pdf"><br>
-
+                <input type="file" id="fileInput" onclick="Removehide()" accept=".pdf"><br>
+                  
+                <div id="hide" class="hide">
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 <label class="button-87" onclick="flattenPDF()">Flatten PDF</label><br>
+                </div>
+
                 <a id="downloadLink" href="#" style="display:none">Download flattened PDF</a>
-              
+
             </div>
           </div>
   </body>
