--- a/mergepdf.html
+++ b/mergepdf.html
@@ -71,16 +71,19 @@
     <form action="/">
         <div id="paper"></div>
           <div class="poster">
-              <h2>Import pdfs to merge</h2>
+              <h2>Import your PDFs to merge</h2>
 
-              <label for="file1">pdf 1</label>
+              <label class="button-87" for="file1">Import PDF 1</label>
               <input type="file" id="file1" accept=".pdf">        
 
-              <label for="file2">pdf 2</label>
+              <label class="button-87" for="file2" onclick="Removehide()">Import PDF 2</label>
               <input type="file" id="file2" accept=".pdf">
-
-              <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
-              <label class="button-87" onclick="mergePDFs()">Merge PDFs</label>
+              
+              <div id="hide" class="hide">
+              <textarea id="filename" rows="4" cols="35"  placeholder="Rename the file (or leave it blank)"></textarea>
+              <label id="mergebutton" class="button-87" onclick="mergePDFs()">Merge PDFs</label>
+              </div>
+              
               <a id="downloadLink" href="#" style="display:none">Download Merged PDF</a>
 
 
