--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -74,7 +74,7 @@
                 <h2>Import pdf to flatten</h2>
 
                 <label for="fileInput">pdf</label>
-                <input type="file" id="fileInput" onclick="Removehide()" accept=".pdf"><br>
+                <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
                   
                 <div id="hide" class="hide">
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
