--- a/mergepdf.html
+++ b/mergepdf.html
@@ -76,7 +76,7 @@
               <label class="button-87" for="file1">Import PDF 1</label>
               <input type="file" id="file1" accept=".pdf">        
 
-              <label class="button-87" for="file2" onclick="Removehide()">Import PDF 2</label>
+              <label class="button-87" for="file2" onclick="removehide()">Import PDF 2</label>
               <input type="file" id="file2" accept=".pdf">
               
               <div id="hide" class="hide">
