--- a/separatepdf.html
+++ b/separatepdf.html
@@ -74,7 +74,7 @@
                 <h2>Import your PDF to separate</h2>
 
                 <label class="button-87" for="fileInput">Import PDF</label>
-                <input type="file" id="fileInput" onclick="Removehide()" accept=".pdf"><br>
+                <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
                 <h2>Enter Pages to Extract</h2>
