--- a/MixToolz.html
+++ b/MixToolz.html
@@ -60,6 +60,11 @@
         <img id="icon" src="MixTooLz Images/img_converter.png">
         Image Convert
         </button>
+
+<button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Flatten.png">
+        Flatten PDF
+        </button>
       </div>
   </div>
 
