--- a/text.html
+++ b/text.html
@@ -56,9 +56,15 @@
                 </button>
 
                 <button type="button" onclick="location.href='imgConvert.html'" id="blocks">
-                    <img id="icon" src="MixTooLz Images/img_converter.png">
-                    Image Convert
-                    </button>
+                <img id="icon" src="MixTooLz Images/img_converter.png">
+                Image Convert
+                </button>
+
+                <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/Flatten.png">
+                Flatten PDF
+                </button>
+                
         </div>
         
 <br></br>
