25/5 draw shape features

--- a/draw.html
+++ b/draw.html
@@ -78,13 +78,28 @@
           <canvas id="canvas" width="0" height="0"></canvas>
           
           <div class="tools hide">
-            <span class="title">Line Width :</span>
+            <span class="title">Line Width</span>
             <ul class="options">
-              <li class="slider">
+              <li class="slide">
                 <input type="range" id="size" min="1" max="30" value="5">
               </li>
             </ul>
-            <span class="title">Colors :</span>
+            <span class="title">Shapes</span>
+            <ul class="options">
+              <li class="shape" id="free">
+                <span>Free</span>
+              </li>
+              <li class="shape" id="line">
+                <span>Line</span>
+              </li>
+              <li class="shape" id="rectangle">
+                <span>Rectangle</span>
+              </li>
+              <li class="shape" id="circle">
+                <span>Circle</span>
+              </li>
+            </ul>
+            <span class="title">Colors</span>
             <ul class="options">
               <li class="option"></li>
               <li class="option"></li>
