26/5 text size feature

--- a/text.html
+++ b/text.html
@@ -89,6 +89,12 @@
                         <textarea id="text" placeholder="Enter text to add" row="5" cols="50"></textarea>
                     </li>
                 </ul>
+                <span class="title">Text Size</span>
+                <ul class="options">
+                <li class="slide">
+                    <input type="range" id="size" min="5" max="128" value="5">
+                </li>
+                </ul>
                 <ul class="options">
                     <li class="option"></li>
                     <li class="option"></li>
