--- a/crop.html
+++ b/crop.html
@@ -86,16 +86,17 @@
                 <center><h2>Import your image here</h2></center>
                 <input type="file" id="file" accept="image/jpg, image/png, image/jpeg">
                 <label class="button-87"for="file">Import Image</label>
-                <div class="aspect-ratio hide">
+                <div class="aspect-ratio hide" align="left">
                     <span>Aspect Ratio</span>
                     <li>16:9</li>
                     <li>5:4</li>
                     <li>2:3</li>
                     <li>1:1</li>
                     <li>Custom</li>
+                    <br></br>
+                    <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 </div>
                 
-                <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 <div class="btn">
                     <button id="preview" class="hide">Preview</button>
                     <a href="" id="download" class="hide">Download</a>
