--- a/MixToolz.html
+++ b/MixToolz.html
@@ -65,6 +65,12 @@
         <img id="icon" src="MixTooLz Images/Flatten.png">
         Flatten PDF
         </button>
+
+        <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Metadata.png">
+        Metadata PDF
+        </button>
+        
       </div>
   </div>
 
