--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -69,6 +69,11 @@
           Flatten PDF
           </button>
 
+          <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Metadata.png">
+          Metadata PDF
+          </button>
+
         </div>
     </div>
 
