--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -64,6 +64,11 @@
         <img id="icon" src="MixTooLz Images/Flatten.png">
         Flatten PDF
         </button>
+
+        <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Metadata.png">
+        Metadata PDF
+        </button>
       
     </div>
   </div>
