--- a/imgConvert.html
+++ b/imgConvert.html
@@ -66,7 +66,7 @@
         Flatten PDF
         </button>
 
-        <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+        <button type="button" onclick="location.href='metadatapdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Metadata.png">
         Metadata PDF
         </button>
