--- a/MixToolz.html
+++ b/MixToolz.html
@@ -70,7 +70,12 @@
         <img id="icon" src="MixTooLz Images/Metadata.png">
         Metadata PDF
         </button>
-        
+
+        <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
+        <img id="icon" src="">
+        Image Tuning
+        </button>
+  
       </div>
   </div>
 
@@ -95,6 +100,7 @@
 
 
 <script src="MixToolz.js"></script>
+<script src="imagetuning.js"></script>
 
 </body>
 </html>
