--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -74,6 +74,11 @@
           Metadata PDF
           </button>
 
+          <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
+          <img id="icon" src="">
+          Image Tuning
+          </button>
+
         </div>
     </div>
 
