--- a/draw.html
+++ b/draw.html
@@ -66,9 +66,14 @@
           Flatten PDF
           </button>
           
-          <button type="button" onclick="location.href='metadatapdf.html" id="blocks">
+          <button type="button" onclick="location.href='metadatapdf.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Metadata.png">
           Metadata PDF
+          </button>
+
+          <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
+          <img id="icon" src="">
+          Image Tuning
           </button>
           
         </div>
