--- a/imgConvert.html
+++ b/imgConvert.html
@@ -70,6 +70,11 @@
         <img id="icon" src="MixTooLz Images/Metadata.png">
         Metadata PDF
         </button>
+
+        <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
+        <img id="icon" src="">
+        Image Tuning
+        </button>
         </div>
         
     </div>
