--- a/text.html
+++ b/text.html
@@ -69,6 +69,11 @@
                 <img id="icon" src="MixTooLz Images/Metadata.png">
                 Metadata PDF
                 </button>
+
+                <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
+                <img id="icon" src="">
+                Image Tuning
+                </button>
                 
         </div>
         
