28/5 label button adjusted

--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -95,7 +95,7 @@
   
             <div class="upload-img">
               <input type="file" id="imageUpload" accept="image/*" onchange="displayImage(event)">
-              <label for="imageUpload">Choose file</label>
+              <label class="button-87" for="imageUpload">Choose file</label>
               <div id="imageContainer" style="margin-top: 20px;">
                   <img id="output" style="max-width: 400px; max-height: 400px;" />
               </div>
