--- a/imgConvert.html
+++ b/imgConvert.html
@@ -90,7 +90,7 @@
 
           <div class="upload-img">
             <input type="file" id="imageUpload" accept="image/jpg, image/jpeg" onchange="displayImage(event)">
-            <label for="imageUpload">Import file</label>
+            <label class="button-28" for="imageUpload">Import file</label>
             <div id="imageContainer" style="margin-top: 20px;">
                 <img id="output" style="max-width: 400px; max-height: 400px;" />
             </div>
