--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -88,7 +88,7 @@
             <div class="poster">
                 <h2>Import pdf to flatten</h2>
 
-                <label for="fileInput">pdf</label>
+                <label class="button-28" for="fileInput">pdf</label>
                 <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
                   
                 <div id="hide" class="hide">
