--- a/imagetuning.html
+++ b/imagetuning.html
@@ -63,7 +63,7 @@
         Flatten PDF
         </button>
         
-        <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
+        <button type="button" onclick="location.href='metadatapdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Metadata.png">
         Metadata PDF
         </button>
@@ -87,7 +87,7 @@
 
           <div class="upload-img">
             <input type="file" id="imageUpload" accept="image/*" onchange="displayImage(event)">
-            <label for="imageUpload">Import file</label>
+            <label class="button-87" for="imageUpload">Import file</label>
             <div id="imageContainer" style="margin-top: 20px;">
                 <img id="output" style="max-width: 400px; max-height: 400px;" />
             </div>
