--- a/mergepdf.html
+++ b/mergepdf.html
@@ -103,4 +103,4 @@
 
 <script src="MixToolz.js"></script>
 <script src="mergepdf.js"></script>
-<script src="https://unpkg.com/pdf-lib"></script>
+<script src="https://unpkg.com/pdf-lib@1.17.1"></script>
