--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -81,7 +81,7 @@
       <form action="/">
           <div id="paper"></div>
             <div class="poster">
-                <h2>Import your PDF to read or write metadata</h2>
+                <h2>Import your PDF to read (or write) Metadata</h2>
 
                 <label class="button-87" for="fileInput">Import PDF</label>
                 <input type="file" id="fileInput" onclick="readdataPDF()" accept=".pdf"><br>
@@ -96,4 +96,4 @@
 
 <script src="MixToolz.js"></script>
 <script src="metadatapdf.js"></script>
-<script src="https://unpkg.com/pdf-lib"></script>
+<script src="https://unpkg.com/pdf-lib@1.17.1"></script>
