28/5 undo & redo function

--- a/text.html
+++ b/text.html
@@ -94,6 +94,10 @@
 
             <div class="tools hide">
                 <ul class="options">
+                    <li class="undo">Undo</li>
+                    <li class="redo">Redo</li>
+                </ul>
+                <ul class="options">
                     <li class="text_option">
                         <span id="text-btn">Add Text</span>
                         <textarea id="text" placeholder="Enter text to add" row="5" cols="40"></textarea>
@@ -124,6 +128,12 @@
                       <input type="color" id="color-picker" value="#4A98F7">
                     </li>
                 </ul>
+                <div>
+                    <li class="clean">
+                      <img src="MixTooLz Images/Clean.png" id="icon">
+                      <span>Clear</span>
+                    </li>
+                </div>
             </div>
 
             <div class="btn">
