--- a/draw.html
+++ b/draw.html
@@ -94,15 +94,17 @@
           <canvas id="canvas" width="0" height="0"></canvas>
           
           <div class="tools hide">
+            <ul class="options">
+              <li class="undo">Undo</li>
+              <li class="redo">Redo</li>
+            </ul>
             <span class="title">Line Width</span>
-            <br><br>
             <ul class="options">
               <li class="slide">
                 <input type="range" id="size" min="1" max="30" value="5">
               </li>
             </ul>
             <span class="title">Shapes</span>
-            <br><br>
             <ul class="options">
               <li class="shape" id="free">
                 <span>Free</span>
@@ -118,7 +120,6 @@
               </li>
             </ul>
             <span class="title">Colors</span>
-            <br><br>
             <ul class="options">
               <li class="option"></li>
               <li class="option"></li>
