--- a/MixToolz.html
+++ b/MixToolz.html
@@ -81,8 +81,6 @@
 
 <br></br>
 <br></br>
-<br></br>
-<br></br>
 
 <div align="middle">
 
@@ -96,6 +94,26 @@
 </div>
 
 <br></br>
+
+<div id="squarebox">
+<table id="toolTable">
+  <button> <thead>
+      <tr>
+          <th><img class="iconz" src="MixTooLz Images/img_converter.png" ></td></th>
+          <th>Image to PDF
+      </tr>
+  </thead>
+  <tbody>
+   
+      
+      <!-- Add more rows for other tools -->
+  </tbody></button>
+</table>
+</div>
+
+
+
+
 
 
 
