--- a/imagetuning.html
+++ b/imagetuning.html
@@ -82,7 +82,7 @@
         <div class="poster">
             <h2>Convert Image Format</h2>
         <div class="upload-img">
-          <input type="file" id="container" accept="" onchange="container(event)">
+          <input type="file" id="container" accept="image/*" onchange="container(event)">
           <img id="output" width="400" height="400" />
 
           <div class="upload-img">
