--- a/MixToolz.html
+++ b/MixToolz.html
@@ -84,38 +84,156 @@
 
 <div align="middle">
 
-  <p class="button-87">
-  Set of useful tools that processes 
+ <p class="button-87">
+  Set of useful tools that processes PDF documents or edit images on your own browser.
+
   <br>
-  PDF documents or edit images 
   <br>
-  on your own browser.
 
 </div>
 
 <br></br>
 
-<div id="squarebox">
-<table id="toolTable">
-  <button> <thead>
+<div class="squarebox">
+   <button onclick="location.href='imgConvert.html'">
+    <table class="toolTable">
+    <thead>
+    <th><img class="iconz" src="MixTooLz Images/img_converter.png" ></th>
+    <th>Convert PNG</th>  
       <tr>
-          <th><img class="iconz" src="MixTooLz Images/img_converter.png" ></td></th>
-          <th>Image to PDF
+      <td>Turn JPG and JPEG images to PNG</td>           
       </tr>
-  </thead>
-  <tbody>
-   
-      
-      <!-- Add more rows for other tools -->
-  </tbody></button>
-</table>
+    </thead>
+    </table>
+  </button>
 </div>
 
+<div class="squarebox">
+  <button onclick="location.href='imgConvert.html'">
+    <table class="toolTable">
+    <thead>
+    <th><img class="iconz" src="MixTooLz Images/Crop.png" ></th>
+    <th>Crop Image</th>  
+        <tr>
+        <td>Crop JPG, JPEG or PNG images</td>
+        </tr>
+    </thead>
+    </table>
+  </button>
+</div>
 
+  <div class="squarebox">
+    <button onclick="location.href='separatepdf.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Separate.png" ></th>
+      <th>Seperate PDF</th>  
+          <tr>
+          <td>Seperate one or several pages from one PDF file to make a seperate PDF file</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 
+  <div class="squarebox">
+    <button onclick="location.href='mergepdf.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Merge.png" ></th>
+      <th>Merge PDF</th>  
+          <tr>
+          <td>Combine two PDF files into one PDF file</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 
+  <div class="squarebox">
+    <button onclick="location.href='metadatapdf.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Metadata.png" ></th>
+      <th>Metadata PDF</th>  
+          <tr>
+          <td>Read hidden data of a PDF file</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 
+  <div class="squarebox">
+    <button onclick="location.href='convertfile2pdf.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Convertpdf.png" ></th>
+      <th>Convert PDF</th>  
+          <tr>
+          <td>Convert an image to PDF</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 
+  <div class="squarebox">
+    <button onclick="location.href='draw.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Draw.png" ></th>
+      <th>Draw on Image</th>  
+          <tr>
+          <td>Draw on an image with different line width, shapes and colours </td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
+
+  <div class="squarebox">
+    <button onclick="location.href='text.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Text.png" ></th>
+      <th>Add Text to Image</th>  
+          <tr>
+          <td>Add text of different fonts, text size and colours to an image</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
+
+  <div class="squarebox">
+    <button onclick="location.href='flatteningpdf.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/Flatten.png" ></th>
+      <th>Flatten PDF</th>  
+          <tr>
+          <td>Flatten the elements and texts in a PDF file</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
+
+  <div class="squarebox">
+    <button onclick="location.href='imagetuning.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="" ></th>
+      <th>Image adjustments</th>  
+          <tr>
+          <td>Adjust brightness and contrast of an image</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
+</div>
 
 <script src="MixToolz.js"></script>
 <script src="imagetuning.js"></script>
