--- a/MixToolz.html
+++ b/MixToolz.html
@@ -109,7 +109,7 @@
 </div>
 
 <div class="squarebox">
-  <button onclick="location.href='imgConvert.html'">
+  <button onclick="location.href='crop.html'">
     <table class="toolTable">
     <thead>
     <th><img class="iconz" src="MixTooLz Images/Crop.png" ></th>
@@ -225,7 +225,7 @@
       <table class="toolTable">
       <thead>
       <th><img class="iconz" src="" ></th>
-      <th>Image adjustments</th>  
+      <th>Image tuning</th>  
           <tr>
           <td>Adjust brightness and contrast of an image</td>
           </tr>
