--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -5,7 +5,7 @@
   
 <head>
 
-<title>MixTooLz</title>
+<title>Metadata PDF</title>
 <link rel="stylesheet" type="text/css" href="MixToolz.css">
 
 </head>
