--- a/mergepdf.html
+++ b/mergepdf.html
@@ -5,7 +5,7 @@
   
 <head>
 
-<title>MixTooLz</title>
+<title>Merge PDF</title>
 <link rel="stylesheet" type="text/css" href="MixToolz.css">
 
 </head>
