--- a/imgConvert.html
+++ b/imgConvert.html
@@ -72,9 +72,15 @@
         </button>
 
         <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
-        <img id="icon" src="">
+        <img id="icon" src="MixTooLz Images/tuning.png">
         Image Tuning
         </button>
+
+        <button type="button" onclick="location.href='resize.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/resize.png">
+        Resize
+        </button>
+
         </div>
         
     </div>
