--- a/text.html
+++ b/text.html
@@ -71,8 +71,13 @@
                 </button>
 
                 <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
-                <img id="icon" src="">
+                <img id="icon" src="MixTooLz Images/tuning.png">
                 Image Tuning
+                </button>
+
+                <button type="button" onclick="location.href='resize.html'" id="blocks">
+                <img id="icon" src="MixTooLz Images/resize.png">
+                Resize
                 </button>
                 
         </div>
@@ -94,8 +99,12 @@
 
             <div class="tools hide">
                 <ul class="options">
-                    <li class="undo">Undo</li>
-                    <li class="redo">Redo</li>
+                    <li class="undo">
+                        <img src="MixTooLz Images/undo.png" id="icon">
+                    </li>
+                    <li class="redo">
+                        <img src="MixTooLz Images/redo.png" id="icon">
+                    </li>
                 </ul>
                 <ul class="options">
                     <li class="text_option">
