--- a/MixToolz.html
+++ b/MixToolz.html
@@ -31,9 +31,9 @@
         Convert PDF
         </button>
 
-        <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+        <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Separate.png">
-        Separate PDF
+       Extract PDF
         </button>
 
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
@@ -127,9 +127,9 @@
       <table class="toolTable">
       <thead>
       <th><img class="iconz" src="MixTooLz Images/Separate.png" ></th>
-      <th>Seperate PDF</th>  
+      <th>separate PDF</th>  
           <tr>
-          <td>Seperate one or several pages from one PDF file to make a seperate PDF file</td>
+          <td>separate one or several pages from one PDF file to make a separate PDF file</td>
           </tr>
       </thead>
       </table>
