--- a/crop.html
+++ b/crop.html
@@ -30,9 +30,9 @@
                 Convert PDF
                 </button>
 
-                <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+                <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
                 <img id="icon" src="MixTooLz Images/Separate.png">
-                Separate PDF
+                Extract PDF
                 </button>
         
                 <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
