--- a/separatepdf.html
+++ b/separatepdf.html
@@ -5,7 +5,7 @@
   
 <head>
 
-<title>Seperate PDF</title>
+<title>separate PDF</title>
 <link rel="stylesheet" type="text/css" href="MixToolz.css">
 
 </head>
@@ -32,7 +32,7 @@
 
         <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Separate.png">
-        Separate PDF
+       separate PDF
         </button>
 
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
@@ -92,15 +92,18 @@
                 <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
-                <h2>Enter Pages to Extract</h2>
-                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 1,3,5)"></textarea>
+                <h2>Enter Pages to be separate</h2>
+                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separateed (e.g. 1,2 to separate first and second page)"></textarea>
 
-                <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
+                <textarea id="filename1" rows="4" cols="35" placeholder="Rename the first file (or leave it blank)"></textarea>
+
+                <textarea id="filename2" rows="4" cols="35" placeholder="Rename the second file (or leave it blank)"></textarea>
                 
                 <label class="button-87" onclick="separatePDF()">separate PDF</label><br>
                 </div>
 
-                <a id="downloadLink" href="#" style="display:none">Download Separated PDF</a>
+                <a id="downloadLink1" href="#" style="display:none">Download separated first PDF</a>
+                <a id="downloadLink2" href="#" style="display:none">Download separated second PDF</a>
               
             </div>
           </div>
