--- a/draw.html
+++ b/draw.html
@@ -151,7 +151,7 @@
             </ul>
             <div>
             <li class="clean">
-              <img src="MixTooLz Images/Clean.png" id="icon">
+              <img src="MixTooLz Images/Delete.png" id="icon">
               <span>Clear</span>
             </li>
             </div>
