add resize.html to ez access

--- a/MixToolz.html
+++ b/MixToolz.html
@@ -238,6 +238,20 @@
       </table>
     </button>
   </div>
+
+  <div class="squarebox">
+    <button onclick="location.href='resize.html'">
+      <table class="toolTable">
+      <thead>
+      <th><img class="iconz" src="MixTooLz Images/resize.png" ></th>
+      <th>Resize Image</th>  
+          <tr>
+          <td>Change the width and height of an image</td>
+          </tr>
+      </thead>
+      </table>
+    </button>
+  </div>
 </div>
 
 <script src="MixToolz.js"></script>
