--- a/separatepdf.html
+++ b/separatepdf.html
@@ -98,7 +98,7 @@
 
                 <div id="hide" class="hide">
                 <h2>Enter Pages to be separate</h2>
-                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 2 ,separate the from second and third page)"></textarea>
+                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 1,2 to separate first and second page)"></textarea>
 
                 <textarea id="filename1" rows="4" cols="35" placeholder="Rename the first file (or leave it blank)"></textarea>
 
