--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -31,8 +31,8 @@
         </button>
 
         <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Separate.png">
-       Extract PDF
+        <img id="icon" src="MixTooLz Images/Extract.png">
+        Extract PDF
         </button>
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Merge.png">
