--- a/text.html
+++ b/text.html
@@ -31,7 +31,7 @@
                 </button>
 
                 <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
-                <img id="icon" src="MixTooLz Images/Separate.png">
+                <img id="icon" src="MixTooLz Images/Extract.png">
                 Extract PDF
                 </button>
         
