--- a/draw.html
+++ b/draw.html
@@ -95,7 +95,7 @@
             <div>
               <img id="image">
             </div>
-          <h2>Import your image here</h2>
+          <h2>Import your image to draw</h2>
           <label class="button-87" for="input-file">Import Image</label>
           <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
           <canvas id="canvas" width="0" height="0"></canvas>
