--- a/text.html
+++ b/text.html
@@ -92,7 +92,7 @@
             <div>
                 <img id="image">
             </div>
-            <h2>Import your image here</h2>
+            <h2>Import your image to text</h2>
             <label class="button-87" for="input-file">Import Image</label>
             <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
             <canvas id="canvas" width="0" height="0"></canvas>
