--- a/MixToolz.html
+++ b/MixToolz.html
@@ -32,8 +32,18 @@
         </button>
 
         <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Extract.png">
+        Extract PDF
+        </button>
+
+        <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Remove.png">
+        Remove PDF
+        </button>
+
+        <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Separate.png">
-       Extract PDF
+        Separate PDF
         </button>
 
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
@@ -229,24 +239,10 @@
     <button onclick="location.href='imagetuning.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/tuning.png" ></th>
+      <th><img class="iconz" src="" ></th>
       <th>Image tuning</th>  
           <tr>
           <td>Adjust brightness and contrast of an image</td>
-          </tr>
-      </thead>
-      </table>
-    </button>
-  </div>
-
-  <div class="squarebox">
-    <button onclick="location.href='resize.html'">
-      <table class="toolTable">
-      <thead>
-      <th><img class="iconz" src="MixTooLz Images/resize.png" ></th>
-      <th>Resize Image</th>  
-          <tr>
-          <td>Change the width and height of an image</td>
           </tr>
       </thead>
       </table>
