--- a/convertfile2pdf.html
+++ b/convertfile2pdf.html
@@ -33,6 +33,16 @@
 
           <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Separate.png">
+          Extract PDF
+          </button>
+
+          <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Remove.png">
+          Remove PDF
+          </button>
+        
+          <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Separate.png">
           Separate PDF
           </button>
   
