--- a/draw.html
+++ b/draw.html
@@ -32,6 +32,16 @@
           </button>
 
           <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Extract.png">
+          Extract PDF
+          </button>
+
+          <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
+          <img id="icon" src="MixTooLz Images/Remove.png">
+          Remove PDF
+          </button>
+        
+          <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
           <img id="icon" src="MixTooLz Images/Separate.png">
           Separate PDF
           </button>
@@ -151,7 +161,7 @@
             </ul>
             <div>
             <li class="clean">
-              <img src="MixTooLz Images/Delete.png" id="icon">
+              <img src="MixTooLz Images/Clean.png" id="icon">
               <span>Clear</span>
             </li>
             </div>
