--- a/imgConvert.html
+++ b/imgConvert.html
@@ -36,6 +36,16 @@
         Extract PDF
         </button>
 
+        <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Remove.png">
+        Remove PDF
+        </button>
+
+        <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Separate.png">
+        Separate PDF
+        </button>
+
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Merge.png">
         Merge PDF
