--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -102,7 +102,7 @@
                 <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
-                <h2>Enter Pages to Removet</h2>
+                <h2>Enter Pages to Remove</h2>
                 <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be removed (e.g. 1,3,5)"></textarea>
 
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
