--- a/MixToolz.html
+++ b/MixToolz.html
@@ -239,7 +239,7 @@
     <button onclick="location.href='imagetuning.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="" ></th>
+      <th><img class="iconz" src="MixTooLz Images/tuning.png" ></th>
       <th>Image tuning</th>  
           <tr>
           <td>Adjust brightness and contrast of an image</td>
