--- a/text.html
+++ b/text.html
@@ -40,7 +40,7 @@
                 Remove PDF
                 </button>
             
-                <button type="button" onclick="location.href=separatepdf.html'" id="blocks">
+                <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
                 <img id="icon" src="MixTooLz Images/Separate.png">
                 Separate PDF
                 </button>
