3/6 collect text position

--- a/text.html
+++ b/text.html
@@ -118,7 +118,7 @@
                 </ul>
                 <ul class="options">
                     <li class="text_option">
-                        <span id="text-btn">Add Text</span>
+                        <span id="text-btn">Add/Update Text</span>
                         <textarea id="text" placeholder="Enter text to add" row="5" cols="40"></textarea>
                     </li>
                 </ul>
