--- a/crop.html
+++ b/crop.html
@@ -40,7 +40,7 @@
                 Remove PDF
                 </button>
             
-                <button type="button" onclick="location.href=separatepdf.html'" id="blocks">
+                <button type="button" onclick="'location.href=separatepdf.html'" id="blocks">
                 <img id="icon" src="MixTooLz Images/Separate.png">
                 Separate PDF
                 </button>
@@ -97,7 +97,6 @@
         <br></br>
 
         <div class="wall" align="center">
-            <form action="/">
                 <div id="paper"></div>
                 <div class="poster">
                 <div class="volume">
@@ -109,8 +108,8 @@
                     </div>
                 </div>
                 <center><h2>Import your image to crop</h2></center>
-                <input type="file" id="file" accept="image/jpg, image/png, image/jpeg">
-                <label class="button-87"for="file">Import Image</label>
+                <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
+                <label class="button-87"for="input-file">Import Image</label>
                 <div class="aspect-ratio hide" align="left">
                     <span>Aspect Ratio</span>
                     <li>16:9</li>
