--- a/text.html
+++ b/text.html
@@ -129,9 +129,17 @@
                 </li>
                 </ul class="options">
                 <ul>
+                <li class="checkbox">
+                    <input type="checkbox" value="bold" id="bold">
+                    <label for="bold">Bold</label>
+                    <input type="checkbox" value="italic" id="italic">
+                    <label for="italic">Italic</label>
+                </li>
                 <li class="selection">
                     <select name="fonts" id="fonts">
                         <option value="Arial">Arial</option>
+                        <option value="Agency FB">Agency FB</option>                        
+                        <option value="Calibri">Calibri</option>
                         <option value="Cambria">Cambria</option>
                         <option value="Times New Roman">Times New Roman</option>
                     </select>
