--- a/extractpdf.html
+++ b/extractpdf.html
@@ -30,6 +30,16 @@
         Convert PDF
         </button>
 
+        <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Extract.png">
+        Extract PDF
+        </button>
+
+        <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Remove.png">
+        Remove PDF
+        </button>
+
         <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
         <img id="icon" src="MixTooLz Images/Separate.png">
         Separate PDF
