--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -30,9 +30,9 @@
         Convert PDF
         </button>
 
-        <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Separate.png">
-        Separate PDF
+        <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/Extract.png">
+        Extract PDF
         </button>
 
         <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
@@ -81,8 +81,13 @@
         </button>
 
         <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
-        <img id="icon" src="">
+        <img id="icon" src="MixTooLz Images/tuning.png">
         Image Tuning
+        </button>
+
+        <button type="button" onclick="location.href='resize.html'" id="blocks">
+        <img id="icon" src="MixTooLz Images/resize.png">
+        Resize
         </button>
       
     </div>
