--- a/crop.html
+++ b/crop.html
@@ -100,9 +100,6 @@
                 <div id="paper"></div>
                 <div class="poster">
                 <div class="volume">
-                    <div class="image-volume">
-                        <img id="img">
-                    </div>
                     <div class="preview-volume">
                         <img id="preview-image">
                     </div>
@@ -110,6 +107,11 @@
                 <center><h2>Import your image to crop</h2></center>
                 <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
                 <label class="button-87"for="input-file">Import Image</label>
+                <div id="drop_area">
+                    <img id="img">
+                    <h4>Drop your image here</h4>
+                </div>
+
                 <div class="aspect-ratio hide" align="left">
                     <span>Aspect Ratio</span>
                     <li>16:9</li>
