--- a/resize.html
+++ b/resize.html
@@ -104,7 +104,7 @@
             <label class="button-87" for="input-file">Import Image</label>
             <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
             <canvas id="canvas" width="0" height="0"></canvas>
-            <div id="drop_area">
+            <div class="drop_area">
                 <img id="image">
                 <h4>Drop your image here</h4>
             </div>
