--- a/text.html
+++ b/text.html
@@ -106,8 +106,7 @@
             <label class="button-87" for="input-file">Import Image</label>
             <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
             <canvas id="canvas" width="0" height="0"></canvas>
-            <div id="drop_area">
-                <img id="image">
+            <div class="drop_area">
                 <h4>Drop your image here</h4>
             </div>
 
