--- a/imagetuning.html
+++ b/imagetuning.html
@@ -105,7 +105,7 @@
                 <img id="output" style="max-width: 400px; max-height: 400px;" />
             </div>
                 
-        <div class="hide"></div>
+        <div class="hide">
             <h4>Brightness
             <input type="range" id="brightness" min="0" max="200" value="100">
             </h4>
