--- a/flatteningpdf.html
+++ b/flatteningpdf.html
@@ -103,8 +103,8 @@
             <div class="poster">
                 <h2>Import PDF to flatten</h2>
 
-                <label for="fileInput" class="button-87">Import PDF</label>
-                <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
+                <label for="input-file" class="button-87">Import PDF</label>
+                <input type="file" id="input-file" onclick="removehide()" accept=".pdf"><br>
                   
                 <div id="hide" class="hide">
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
