--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -103,8 +103,8 @@
             <div class="poster">
                 <h2>Import your PDF to read (or write) Metadata</h2>
 
-                <label class="button-87" for="fileInput">Import PDF</label>
-                <input type="file" id="fileInput" accept=".pdf"><br>
+                <label class="button-87" for="input-file">Import PDF</label>
+                <input type="file" id="input-file" accept=".pdf"><br>
 
                 <label class="button-87" id="loadPDFButton" onclick="readdataPDF()">Read (or write) Metadata</label>
                 
