--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -103,8 +103,8 @@
             <div class="poster">
                 <h2>Import your PDF to remove pages</h2>
 
-                <label class="button-87" for="fileInput">Import PDF</label>
-                <input type="file" id="fileInput" onclick="removehide()" accept=".pdf"><br>
+                <label class="button-87" for="input-file">Import PDF</label>
+                <input type="file" id="input-file" onclick="removehide()" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
                 <h2>Enter Pages to Remove</h2>
