--- a/crop.html
+++ b/crop.html
@@ -101,7 +101,7 @@
                 <div class="poster">                    
                 <center><h2>Import your image to crop</h2></center> 
                     <div class="drop_area">                    
-                        <h4>Drop your image here</h4>
+                        <h4>Drag & Drop your image here</h4>
                     </div>               
                 <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
                 <label class="button-87"for="input-file">Import Image</label>
