--- a/imagetuning.html
+++ b/imagetuning.html
@@ -96,7 +96,7 @@
         <div class="poster">
             <h2>Adjust Image Brightness & Contrast</h2>
             <div class="drop_area">
-                <h4>Drop your image here</h4>
+                <h4>Drag & Drop your image here</h4>
             </div>
             <div>
                 <input type="file" id="input-file" accept="image/*" onchange="displayImage(event)">
