--- a/text.html
+++ b/text.html
@@ -104,7 +104,7 @@
             </div>
             <h2>Import your image to text</h2>
                 <div class="drop_area">
-                    <h4>Drop your image here</h4>
+                    <h4>Drag & Drop your image here</h4>
                 </div>
             <label class="button-87" for="input-file">Import Image</label>
             <input type="file" id="input-file" accept="image/jpg, image/png, image/jpeg">
