--- a/mergepdf.html
+++ b/mergepdf.html
@@ -102,11 +102,11 @@
           <div class="poster">
               <h2>Import your PDFs to merge</h2>
 
-              <label class="button-87" for="file1">Import PDF 1</label>
-              <input type="file" id="file1" accept=".pdf">        
+              <label class="button-87" for="input-file">Import PDF 1</label>
+              <input type="file" id="input-file" accept=".pdf">        
 
-              <label class="button-87" for="file2" onclick="removehide()">Import PDF 2</label>
-              <input type="file" id="file2" accept=".pdf">
+              <label class="button-87" for="input-file2">Import PDF 2</label>
+              <input type="file" id="input-file2" accept=".pdf">
               
               <div id="hide" class="hide">
               <textarea id="filename" rows="4" cols="35"  placeholder="Rename the file (or leave it blank)"></textarea>
