--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -104,7 +104,7 @@
                 <h2>Import your PDF to remove pages</h2>
 
                 <label class="button-87" for="input-file">Import PDF</label>
-                <input type="file" id="input-file" onclick="removehide()" accept=".pdf"><br>
+                <input type="file" id="input-file" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
                 <h2>Enter Pages to Remove</h2>
