--- a/metadatapdf.html
+++ b/metadatapdf.html
@@ -106,9 +106,9 @@
                 <label class="button-87" for="input-file">Import PDF</label>
                 <input type="file" id="input-file" accept=".pdf"><br>
 
-                <label class="button-87" id="loadPDFButton" onclick="readdataPDF()">Read (or write) Metadata</label>
-                
+                <div id="hide" class="hide">
                 <ul id="metadata-list"></ul>
+                </div>
                 
                 <label class="button-87" id="savePDFButton" style="display: none;">Set data to PDF</label><br>
                 <a id="downloadLink" href="#" style="display:none">Download PDF</a>
