--- a/separatepdf.html
+++ b/separatepdf.html
@@ -104,11 +104,12 @@
                 <h2>Import your PDF to separate</h2>
 
                 <label class="button-87" for="input-file">Import PDF</label>
-                <input type="file" id="input-file" onclick="removehide()" accept=".pdf"><br>
+                <input type="file" id="input-file" accept=".pdf"><br>
 
                 <div id="hide" class="hide">
                 <h2>Enter Pages to be separate</h2>
-                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 1,2 to separate first and second page)"></textarea>
+                <textarea id="pages" rows="4" cols="50" placeholder="Enter pages to be separated (e.g. 2, entered page is the included in the second PDF)"></textarea>
+                <br>
 
                 <textarea id="filename1" rows="4" cols="35" placeholder="Rename the first file (or leave it blank)"></textarea>
 
