--- a/extractpdf.html
+++ b/extractpdf.html
@@ -113,10 +113,14 @@
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 
                 <label class="button-87" onclick="extractPDF()">extract PDF</label><br>
-                </div>
 
                 <a id="downloadLink" href="#" style="display:none">Download Extracted PDF</a>
-              
+
+                <iframe id="pdf1" style="width: 45%; height: 700px;"></iframe>
+
+                <iframe id="pdf2" class="hide" style="width: 45%; height: 700px;"></iframe>
+
+                </div>
             </div>
           </div>
   </body>
