--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -113,9 +113,11 @@
                 <textarea id="filename" rows="4" cols="35" placeholder="Rename the file (or leave it blank)"></textarea>
                 
                 <label class="button-87" onclick="removePDF()">Remove pages</label><br>
-                </div>
 
                 <a id="downloadLink" href="#" style="display:none">Download Changed PDF</a>
+
+                <iframe id="pdf" style="width: 45%; height: 700px;"></iframe>
+                </div>
               
             </div>
           </div>
