--- a/index.html
+++ b/index.html
@@ -6,88 +6,88 @@
 <head>
 
 <title>MixTooLz</title>
-<link rel="stylesheet" type="text/css" href="MixToolz.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 
 
 </head>
 
 <body>
-  <img id="logo" src= "MixTooLz Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='MixToolz.html'">
+  <img id="logo" src= "Images\MixTooLz Logo.png" align="left" margin="0px" onclick="location.href='index.html'">
 
   <div align="right">
     <button type="button" class="collapsible">
-      <img id="menubar" src="MixTooLz Images/Edit.png">&nbsp;Tools</button>
+      <img id="menubar" src="Images/Edit.png">&nbsp;Tools</button>
     
       <div class="content1">
 
         <!--Adding buttons to the navigation bar in home page-->
-        <button type="button" onclick="location.href='MixToolz.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Home.png">
+        <button type="button" onclick="location.href='index.html'" id="blocks">
+        <img id="icon" src="Images/Home.png">
         Home 
         </button>
 
         <button type="button" onclick="location.href='convertfile2pdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Convertpdf.png">
+        <img id="icon" src="Images/Convertpdf.png">
         Convert PDF
         </button>
 
         <button type="button" onclick="location.href='extractpdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Extract.png">
+        <img id="icon" src="Images/Extract.png">
         Extract PDF
         </button>
 
         <button type="button" onclick="location.href='removepagepdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Remove.png">
+        <img id="icon" src="Images/Remove.png">
         Remove PDF
         </button>
 
         <button type="button" onclick="location.href='separatepdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Separate.png">
+        <img id="icon" src="Images/Separate.png">
         Separate PDF
         </button>
 
         <button type="button" onclick="location.href='mergepdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Merge.png">
+        <img id="icon" src="Images/Merge.png">
         Merge PDF
         </button>
 
         <button type="button" onclick="location.href='draw.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Draw.png">
+        <img id="icon" src="Images/Draw.png">
         Draw
         </button>
 
         <button type="button" onclick="location.href='text.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Text.png">
+        <img id="icon" src="Images/Text.png">
         Text
         </button>
 
         <button type="button" onclick="location.href='crop.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Crop.png">
+        <img id="icon" src="Images/Crop.png">
         Crop
         </button>
 
         <button type="button" onclick="location.href='imgConvert.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/img_converter.png">
+        <img id="icon" src="Images/img_converter.png">
         Image Convert
         </button>
 
         <button type="button" onclick="location.href='flatteningpdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Flatten.png">
+        <img id="icon" src="Images/Flatten.png">
         Flatten PDF
         </button>
 
         <button type="button" onclick="location.href='metadatapdf.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/Metadata.png">
+        <img id="icon" src="Images/Metadata.png">
         Metadata PDF
         </button>
 
         <button type="button" onclick="location.href='imagetuning.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/tuning.png">
+        <img id="icon" src="Images/tuning.png">
         Image Tuning
         </button>
 
         <button type="button" onclick="location.href='resize.html'" id="blocks">
-        <img id="icon" src="MixTooLz Images/resize.png">
+        <img id="icon" src="Images/resize.png">
         Resize
         </button>
   
@@ -113,7 +113,7 @@
    <button onclick="location.href='imgConvert.html'">
     <table class="toolTable">
     <thead>
-    <th><img class="iconz" src="MixTooLz Images/img_converter.png" ></th>
+    <th><img class="iconz" src="Images/img_converter.png" ></th>
     <th>Convert PNG</th>  
       <tr>
       <td>Turn JPG and JPEG images to PNG</td>           
@@ -127,7 +127,7 @@
   <button onclick="location.href='crop.html'">
     <table class="toolTable">
     <thead>
-    <th><img class="iconz" src="MixTooLz Images/Crop.png" ></th>
+    <th><img class="iconz" src="Images/Crop.png" ></th>
     <th>Crop Image</th>  
         <tr>
         <td>Crop JPG, JPEG or PNG images</td>
@@ -141,7 +141,7 @@
     <button onclick="location.href='separatepdf.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Separate.png" ></th>
+      <th><img class="iconz" src="Images/Separate.png" ></th>
       <th>separate PDF</th>  
           <tr>
           <td>separate one or several pages from one PDF file to make a separate PDF file</td>
@@ -155,7 +155,7 @@
     <button onclick="location.href='mergepdf.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Merge.png" ></th>
+      <th><img class="iconz" src="Images/Merge.png" ></th>
       <th>Merge PDF</th>  
           <tr>
           <td>Combine two PDF files into one PDF file</td>
@@ -169,7 +169,7 @@
     <button onclick="location.href='metadatapdf.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Metadata.png" ></th>
+      <th><img class="iconz" src="Images/Metadata.png" ></th>
       <th>Metadata PDF</th>  
           <tr>
           <td>Read hidden data of a PDF file</td>
@@ -183,7 +183,7 @@
     <button onclick="location.href='convertfile2pdf.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Convertpdf.png" ></th>
+      <th><img class="iconz" src="Images/Convertpdf.png" ></th>
       <th>Convert PDF</th>  
           <tr>
           <td>Convert an image to PDF</td>
@@ -197,7 +197,7 @@
     <button onclick="location.href='draw.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Draw.png" ></th>
+      <th><img class="iconz" src="Images/Draw.png" ></th>
       <th>Draw on Image</th>  
           <tr>
           <td>Draw on an image with different line width, shapes and colours </td>
@@ -211,7 +211,7 @@
     <button onclick="location.href='text.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Text.png" ></th>
+      <th><img class="iconz" src="Images/Text.png" ></th>
       <th>Add Text to Image</th>  
           <tr>
           <td>Add text of different fonts, text size and colours to an image</td>
@@ -225,7 +225,7 @@
     <button onclick="location.href='flatteningpdf.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/Flatten.png" ></th>
+      <th><img class="iconz" src="Images/Flatten.png" ></th>
       <th>Flatten PDF</th>  
           <tr>
           <td>Flatten the elements and texts in a PDF file</td>
@@ -239,7 +239,7 @@
     <button onclick="location.href='imagetuning.html'">
       <table class="toolTable">
       <thead>
-      <th><img class="iconz" src="MixTooLz Images/tuning.png" ></th>
+      <th><img class="iconz" src="Images/tuning.png" ></th>
       <th>Image tuning</th>  
           <tr>
           <td>Adjust brightness and contrast of an image</td>
@@ -250,7 +250,7 @@
   </div>
 </div>
 
-<script src="MixToolz.js"></script>
+<script src="index.js"></script>
 
 </body>
 </html>
