--- a/removepagepdf.html
+++ b/removepagepdf.html
@@ -5,7 +5,7 @@
   
 <head>
 
-<title>Remove pages from PDF</title>
+<title>Remove PDF pages</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 
 </head>
